--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,6 +18,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Contacts</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="student_list.html">Students</a>
+          </li>
         </ul>
       </div>
     </nav>
