--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacts</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="student_list.html">Students</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -44,9 +47,7 @@
             <li>инструменты отладки</li>
             <li>решение стандартных задач</li>
         </ul>
-      <!--<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>-->
       <hr class="my-4">
-      <!--<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>-->
       <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
 
